--- a/ReadStats/ReadStats.html
+++ b/ReadStats/ReadStats.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>RS3 Stats Detector v1.4</title>
+  <title>RS3 Stats Detector v1.5</title>
   <link rel="stylesheet" type="text/css" href="https://runeapps.org/nis/nis.css">
   <script src="https://runeapps.org/alt1lib.js"></script>
   <style>
@@ -17,7 +17,7 @@
     <button onclick="startFinder()">Start Stats Finder</button>
     <div id="status">Waiting…</div>
     <div id="debug"></div>
-    <div id="version">Build v1.4 (diagnostic)</div>
+    <div id="version">Build v1.5 (fixed pixel capture)</div>
   </div>
 
   <script>
@@ -52,12 +52,11 @@
         return;
       }
 
-      // Grab screen size
       const screenW = alt1.rsWidth || 0;
       const screenH = alt1.rsHeight || 0;
 
       setDebug(
-        `Screen size reported by Alt1: ${screenW}x${screenH}\n` +
+        `Screen size: ${screenW}x${screenH}\n` +
         `Pixel permission: ${alt1.permissionPixel}`
       );
 
@@ -77,6 +76,11 @@
         chunkCounter++;
         heartbeat++;
 
+        if (y >= screenH) {
+          setStatus("Finished scan — no match ❌", "red");
+          return;
+        }
+
         setDebug(
           `Screen size: ${screenW}x${screenH}\n` +
           `Pixel permission: ${alt1.permissionPixel}\n` +
@@ -84,36 +88,17 @@
           `Heartbeat: ${heartbeat}`
         );
 
-        if (y >= screenH) {
-          setStatus("Finished scan — no match ❌", "red");
-          return;
-        }
-
         let w = Math.min(tileSize, screenW - x);
         let h = Math.min(tileSize, screenH - y);
 
-        // Show chunk overlay with ID
-        alt1.overLayRect(
-          a1lib.mixcolor(0, 255, 255),
-          x, y, w, h,
-          500, 1
-        );
-        alt1.overLayText(
-          `#${chunkCounter}`,
-          a1lib.mixcolor(255, 255, 255),
-          14,
-          x + 10, y + 20,
-          500
-        );
+        // Overlay rectangle for the current chunk
+        alt1.overLayRect(a1lib.mixcolor(0, 255, 255), x, y, w, h, 500, 1);
+        alt1.overLayText(`#${chunkCounter}`, a1lib.mixcolor(255, 255, 255), 14, x + 10, y + 20, 500);
 
-        let pixels = null;
         try {
-          pixels = alt1.getPixels(x, y, w, h);
-        } catch (e) {
-          setDebug(`getPixels() threw error at chunk #${chunkCounter}: ${e}`);
-        }
+          let img = a1lib.capture(x, y, w, h);
+          let pixels = img.toData();
 
-        if (pixels) {
           setDebug(
             `Screen size: ${screenW}x${screenH}\n` +
             `Pixel permission: ${alt1.permissionPixel}\n` +
@@ -122,24 +107,20 @@
             `Got pixel buffer length: ${pixels.length}`
           );
 
-          // Look for a bright red pixel
+          // Look for bright red pixel (heart icon)
           for (let i = 0; i < pixels.length; i += 4) {
             let r = pixels[i], g = pixels[i+1], b = pixels[i+2];
             if (r > 200 && g < 80 && b < 80) {
               let px = (i / 4) % w;
               let py = Math.floor((i / 4) / w);
               let absX = x + px, absY = y + py;
-              alt1.overLayRect(
-                a1lib.mixcolor(255, 0, 0),
-                absX - 5, absY - 5, 20, 20,
-                5000, 3
-              );
+              alt1.overLayRect(a1lib.mixcolor(255, 0, 0), absX - 5, absY - 5, 20, 20, 5000, 3);
               setStatus(`Found bright red pixel at ~X:${absX}, Y:${absY} ✅`);
               return;
             }
           }
-        } else {
-          setStatus(`Chunk #${chunkCounter}: getPixels() returned null ❌`, "red");
+        } catch (e) {
+          setStatus(`Error in chunk #${chunkCounter}: ${e}`, "red");
         }
 
         // Move to next chunk
