--- a/ReadStats/ReadStats.html
+++ b/ReadStats/ReadStats.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <title>RS3 Stats Detector v1.6</title>
-  https://runeapps.org/nis/nis.css
-  https://runeapps.org/alt1lib.js
-  <style>
+  <link rel="stylesheet" type="text/css" href="https://runeapps.org/nis/nis.css":/>
+  <link rel="stylesheet" type="text/css" href="https://runeapps.org/alt1lib.js"/>
+  <style> 
     #status { margin-top: 10px; font-weight: bold; color: lime; }
     #debug { margin-top: 10px; font-size: 12px; white-space: pre-line; color: #ccc; }
     #version { margin-top: 5px; font-size: 12px; color: gray; }
