--- a/ReadStats/ReadStats.html
+++ b/ReadStats/ReadStats.html
@@ -1,10 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>RS3 Stats Detector v1.6</title>
-  <link rel="stylesheet" type="text/css" href="https://runeuneapps.org/alt1lib.js"></script{ margin-top: 10px; font-weight: bold; color: lime; }
+  <link rel="stylesheet" type="text/css" href="https://runeapps.org/nis/nis.css">
+  <script src="https://runeapps.org/alt1lib.js"></script>
+  <style>
+    #status { margin-top: 10px; font-weight: bold; color: lime; }
     #debug { margin-top: 10px; font-size: 12px; white-space: pre-line; color: #ccc; }
     #version { margin-top: 5px; font-size: 12px; color: gray; }
   </style>
@@ -15,7 +17,7 @@
     <button onclick="startFinder()">Start Stats Finder</button>
     <div id="status">Waiting…</div>
     <div id="debug"></div>
-    <div id="version">Build v1.7 (ImageCapture API)</div>
+    <div id="version">Build v1.6 (ImageCapture API)</div>
   </div>
 
   <script>
@@ -34,22 +36,15 @@
     }
 
     a1lib.on("ready", () => {
-      if (window.alt1 && typeof a1lib.ImageCapture === "function") {
-        setStatus("Alt1 detected ✅");
-        alt1.overLayText("Alt1 ready", a1lib.mixcolor(0, 255, 0), 20, 200, 200, 3000);
-
-        try {
-          capture = new a1lib.ImageCapture();
-          console.log("Capture object:", capture);
-          setDebug("ImageCapture initialized successfully ✅");
-        } catch (e) {
-          setStatus("Failed to init ImageCapture ❌", "red");
-          setDebug("Error initializing ImageCapture: " + e.message);
+        if (window.alt1) {
+            setStatus("Alt1 detected ✅");
+            alt1.overLayText("Alt1 ready", a1lib.mixcolor(0, 255, 0), 20, 200, 200, 3000);
+    
+            // Correct capture initialization
+            capture = alt1.capture;
+        } else {
+            setStatus("Not running in Alt1 ❌", "red");
         }
-      } else {
-        setStatus("Alt1 or ImageCapture not available ❌", "red");
-        setDebug("Alt1: " + !!window.alt1 + ", ImageCapture: " + !!a1lib.ImageCapture);
-      }
     });
 
     function startFinder() {
@@ -74,11 +69,10 @@
         setStatus("Alt1 reports 0x0 screen ❌", "red");
         return;
       }
-      if (!capture) {
+      if (!capture || !capture.capture) {
         setStatus("Capture not initialized ❌", "red");
-        console.log("Capture object:", capture);
         return;
-      }
+    }
 
       setStatus("Starting scan…");
 
@@ -97,6 +91,7 @@
         let w = Math.min(tileSize, screenW - x);
         let h = Math.min(tileSize, screenH - y);
 
+        // Overlay rectangle for current chunk
         alt1.overLayRect(a1lib.mixcolor(0, 255, 255), x, y, w, h, 500, 1);
         alt1.overLayText(`#${chunkCounter}`, a1lib.mixcolor(255, 255, 255), 14, x + 10, y + 20, 500);
 
@@ -111,6 +106,7 @@
             `Buffer length: ${pixels.length}`
           );
 
+          // Look for bright red pixel
           for (let i = 0; i < pixels.length; i += 4) {
             let r = pixels[i], g = pixels[i+1], b = pixels[i+2];
             if (r > 200 && g < 80 && b < 80) {
@@ -123,9 +119,10 @@
             }
           }
         } catch (e) {
-          setStatus(`Error in chunk #${chunkCounter}: ${e.message}`, "red");
+          setStatus(`Error in chunk #${chunkCounter}: ${e}`, "red");
         }
 
+        // Move to next chunk
         x += tileSize;
         if (x >= screenW) {
           x = 0;
